# DataCenterDigitalTwin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
apps/api/: .dockerignore  README.md  pyproject.toml
apps/api/app/: alerting.py  api.py  domain_events.py  event_store.py  ingest.py  logic.py  maintenance_model.py  simulator.py
apps/api/app/config/: alarm_rules.json  baseline_choices.json  metric_units.json  point_order.json  scenario_profiles.json  scenarios.json  zone_by_asset.json
apps/api/tests/: test_alerting.py  test_api_helpers.py  test_api_routes.py  test_domain_events.py  test_event_store.py  test_ingest.py  test_logic.py  test_maintenance_model.py  test_smoke.py
mini-dc-digital-twin/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mini-dc-digital-twin/app/: alerting.py  api.py  config_loader.py  ingest.py  logic.py  maintenance_model.py  simulator.py
mini-dc-digital-twin/app/config/: alarm_rules.json  baseline_choices.json  scenario_profiles.json
mini-dc-digital-twin/frontend/: .env.example  Dockerfile  index.html  package-lock.json
mini-dc-digital-twin/frontend/src/: App.jsx
mini-dc-digital-twin/grafana/: dashboard-notes.md
mini-dc-digital-twin/grafana/dashboards/: dc-facility-trends.json  dc-operations-overview.json
mini-dc-digital-twin/grafana/provisioning/datasources/: clickhouse.yml  prometheus.yml
mini-dc-digital-twin/ml/artifacts/: maintenance_dataset.json  maintenance_model.json  maintenance_report.json
mini-dc-digital-twin/prometheus/: prometheus.yml
mini-dc-digital-twin/sql/: init.sql  views.sql
(+42 files in other folders)
